Add updatesong endpoint
